--- a/ALL/project/package.json
+++ b/ALL/project/package.json
@@ -14,7 +14,9 @@
   "author": "Programer",
   "license": "ISC",
   "dependencies": {
-    "laravel-mix": "^6.0.49"
+    "bootstrap": "^5.3.7",
+    "laravel-mix": "^6.0.49",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "resolve-url-loader": "^5.0.0",
