--- a/ALL/cookie/package.json
+++ b/ALL/cookie/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch app.js"
+    "start": "node --watch app.js",
+    "seed": "node seeder.js",
+    "front": "npx mix watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.11.0",
     "cookie-parser": "^1.4.7",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "laravel-mix": "^6.0.49",
+    "md5": "^2.3.0"
   }
 }
