--- a/ALL/db/mix-manifest.json
+++ b/ALL/db/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/public/app.js": "/public/app.js",
+    "/public/app1.js": "/public/app1.js",
     "/public/style.css": "/public/style.css"
 }
