--- a/Mentorius/008 kazkas/package.json
+++ b/Mentorius/008 kazkas/package.json
@@ -11,8 +11,10 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "joi": "^18.0.0",
+    "mysql2": "^3.14.3",
     "nodemon": "^3.1.10"
   }
 }
